feat: modernize library to Java 21/26
Signed-off-by: Stefano Braghin <527806+stefano81@users.noreply.github.com>